@@ -1,3 +1,8 @@
+2005-01-12  Sushma Rai  <rsushma@novell.com>
+
+	* camel/camel-exchange-provider.c: Added private function
+	to validate user credentials.
+
 2005-01-10  Not Zed  <NotZed@Ximian.com>
 
 	* mail/mail-stub.c (mail_stub_read_args): long/int ->uint32.
